# verilog-a-sim

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
circuits/: diode_iv.net  divider.net  hier_divider.net  mos_dc.net  rc_step.net  rectifier.net  ring_osc.net
crates/va-abi/: Cargo.toml
crates/va-abi/src/: instance.rs  lib.rs  stamps.rs
crates/va-abi/src/reference/: bjt.rs  capacitor.rs  diode.rs  mod.rs  resistor.rs  vsource.rs
crates/va-acnoise/: Cargo.toml
crates/va-acnoise/src/: ac.rs  lib.rs  noise.rs
crates/va-cli/: Cargo.toml
crates/va-cli/src/: lib.rs  main.rs  plot.rs
crates/va-codegen/: Cargo.toml
crates/va-codegen/src/: ad.rs  lib.rs  lower.rs
crates/va-core/: Cargo.toml
crates/va-core/src/: convergence.rs  dc.rs  lib.rs  linsolve.rs  mna.rs  newton.rs
crates/va-frontend/: Cargo.toml
crates/va-frontend/src/: ast.rs  disciplines.rs  elaborate.rs  keywords.rs  lexer.rs  lib.rs  parser.rs  preprocess.rs
crates/va-harness/: Cargo.toml
crates/va-harness/src/: dc.rs  golden.rs  lib.rs  metrics.rs  tran.rs
crates/va-ir/: Cargo.toml
crates/va-ir/src/: lib.rs
crates/va-netlist/: Cargo.toml
crates/va-netlist/src/: lib.rs  parser.rs
crates/va-transient/: Cargo.toml
crates/va-transient/src/: events.rs  integrator.rs  lib.rs
docs/: Keyword_parser.txt  architecture.md  interfaces.md  prior-art.md  roadmap.md  thesis-map.md  token-reference.md  validation.md
docs/bridges/: README.md  interface-alpha-ir.md  interface-beta-abi.md
docs/tutorials/: _quarto.yml  index.qmd
docs/tutorials/shared/: 01-interfaces.qmd  02-reference-models.qmd
docs/tutorials/t1-frontend/: 01-lexing.qmd  02-parsing.qmd  03-elaboration.qmd
docs/tutorials/t2-codegen/: 01-ad-core.qmd  02-lowering.qmd  03-charge-and-coverage.qmd
docs/tutorials/t3-core/: 01-mna.qmd  02-newton.qmd  03-nonlinear-dc.qmd
docs/tutorials/t4-transient/: 01-integration.qmd  02-lte-timestep.qmd  03-events.qmd
docs/tutorials/t5-acnoise/: 01-ac.qmd  02-noise.qmd
docs/tutorials/t6-integration/: 01-netlist.qmd  02-cli.qmd  03-validation.qmd  04-convergence-dashboard.qmd
golden/: README.md  diode_iv.golden  divider.golden  mos_dc.golden  rc_step.golden  rectifier.golden  ring_osc.golden
models/: capacitor.va  diode.va  disciplines.vams  leg.va  mosfet.va  resistor.va  series_divider.va
tests/: pipeline.rs
xtask/: Cargo.toml
xtask/src/: main.rs
