[package]
name = "va-abi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Interface β: the ModelInstance / StampSink ABI plus hand-written reference models."

# va-abi is a LEAF crate (the project's internal 'OSDI'). Do NOT add internal `va-*`
# dependencies (§3). It must compile and ship working reference models on its own.
[dependencies]
